--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -82,7 +82,7 @@ const stack = [
           <p class='animated text-lg md:text-xl lg:text-2xl font-semibold opacity-75'>
             Hello, I am ...
           </p>
-          <p class='animated text-2xl md:text-3xl lg:text-4xl font-bold uppercase text-black dark:text-white'>
+          <p class='animated text-2xl md:text-3xl lg:text-4xl font-bold text-black dark:text-white'>
             Ritu Raj
           </p>
           <p class='animated text-sm md:text-base lg:text-lg opacity-75'>
