--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,6 +38,11 @@ const stack = [
     icon: "tailwind", 
     href: "https://tailwindcss.com" 
   },
+  { 
+    text: "StackJS", 
+    icon: "solidjs", 
+    href: "https://www.solidjs.com" 
+  },
 ]
 ---
 
