--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -147,8 +147,7 @@ const stack = [
           </p>
           <div class="flex flex-wrap items-center gap-2 mt-5">
             {stack.map(item => (
-              <!-- <StackCard  text={item.text} icon={item.icon} href={item.href}/> -->
-              <StackIcon name={item.icon} />
+              <StackCard  text={item.text} icon={item.icon} href={item.href}/>
             ))}
           </div>
           <div>
